[workspace]
    members = [
        "crates/common",
        "crates/models",
        "crates/narantuya",
        "crates/surtrps",
        "crates/terraps",
        "crates/xtask",
    ]
    resolver = "2"

    [workspace.package]
        version = "0.6.15"

    [workspace.dependencies]
        anyhow = "1"
        axum = "0.7"
        base64 = "0.22"
        chrono = "0.4"
        constcat = "0.5"
        env_logger = "0.11"
        openssl = "0.10"
        rand = { version = "0.8", features = ["std_rng"] }
        uuid = { version = "1", features = [
            "fast-rng",
            "macro-diagnostics",
            "v4",
        ] }
        zip = "2"

        # Crypto
        aes    = "0.8"
        cbc    = { version = "0.1", features = ["alloc", "std"] }
        libaes = "0.7"
        md-5   = "0.10"
        ring   = "0.17"

        # HTTP
        reqwest = { version = "0.12", features = ["json", "stream"] }

        # Tokio
        h2 = "0.4"
        tokio = { version = "1", default-features = false, features = [
            "fs",
            "io-std",
            "macros",
            "rt-multi-thread",
        ] }
        tokio-util = { version = "0.7", features = ["io"] }

        # Data Serialization
        serde      = { version = "1", features = ["derive"] }
        serde_json = { version = "1", features = ["preserve_order"] }
        serde_repr = "0.1"

        # Tracings
        tracing = "0.1"
        tracing-futures = "0.2"
        tracing-log = { version = "0.2", features = ["log-tracer", "std"] }
        tracing-subscriber = { version = "0.3", features = [
            "env-filter",
            "std",
            "tracing",
            "tracing-log",
        ] }

[profile.release]
    codegen-units = 1     # Maximum size reduction optimizations.
    debug         = false # Disable debug information.
    lto           = true  # Link-time optimization.
    opt-level     = 3     # Optimize for speed.
    rpath         = true  # Disable runtime path.
    strip         = true  # Automatically strip symbols from the binary.
