[package]
name = "rust-launcher"
version.workspace = true
edition = "2021"

[dependencies]
mozdevice = "0.5"
serde.workspace = true
reqwest.workspace = true
serde_json.workspace = true
frida.workspace = true
common_utils = { path = "../common" }
anyhow.workspace = true
base64.workspace = true
zip.workspace = true
tokio.workspace = true
