[package]
name = "rust-launcher"
version.workspace = true
edition = "2021"

[dependencies]
anyhow.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
zip.workspace = true

frida = { version = "0.13", features = ["auto-download"] }
common_utils = { path = "../common" }
mozdevice = "0.5"
