[package]
    edition           = "2021"
    name              = "common_utils"
    publish           = false
    version.workspace = true

[dependencies]
    anyhow.workspace     = true
    base64.workspace     = true
    chrono.workspace     = true
    serde.workspace      = true
    serde_json.workspace = true
