[package]
    edition           = "2021"
    name              = "narantuya"
    version.workspace = true

[dependencies]
    anyhow.workspace     = true
    base64.workspace     = true
    reqwest.workspace    = true
    serde.workspace      = true
    serde_json.workspace = true
    tokio.workspace      = true
    zip.workspace        = true

    common_utils = { path = "../common" }
    frida        = { version = "0.13", features = ["auto-download"] }
    mozdevice    = "0.5"
