[package]
name = "surtr-ps"
version.workspace = true
edition = "2021"
description = "Server implementations for a certain Gacha Tower Defense game. V2"
authors = ["EnokiUN", "Rh", "UPON"]
publish = false

[dependencies]
env_logger.workspace = true
anyhow.workspace = true
chrono.workspace = true
constcat.workspace = true
axum.workspace = true
base64.workspace = true
zip.workspace = true
uuid.workspace = true
rand.workspace = true

aes.workspace = true
cbc.workspace = true
libaes.workspace = true
ring.workspace = true
md-5.workspace = true

reqwest.workspace = true

h2.workspace = true
tokio.workspace = true
tokio-util.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true

tracing.workspace = true
tracing-log.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true

tower-http = { version = "0.5", features = ["trace"] }
common_utils = { path = "../common" }
models = { path = "../models" }

[[bin]]
name = "surtr-ps"
path = "src/main.rs"
