[package]
    authors           = ["EnokiUN", "Rh", "UPON"]
    description       = "Server implementations for a certain Gacha Tower Defense game. V2"
    edition           = "2021"
    name              = "surtr-ps"
    publish           = false
    version.workspace = true

[dependencies]
    anyhow.workspace     = true
    axum.workspace       = true
    base64.workspace     = true
    chrono.workspace     = true
    constcat.workspace   = true
    env_logger.workspace = true
    rand.workspace       = true
    uuid.workspace       = true
    zip.workspace        = true

    aes.workspace    = true
    cbc.workspace    = true
    libaes.workspace = true
    md-5.workspace   = true
    ring.workspace   = true

    reqwest.workspace = true

    h2.workspace         = true
    tokio.workspace      = true
    tokio-util.workspace = true

    serde.workspace      = true
    serde_json.workspace = true
    serde_repr.workspace = true

    tracing.workspace            = true
    tracing-futures.workspace    = true
    tracing-log.workspace        = true
    tracing-subscriber.workspace = true

    common_utils = { path = "../common" }
    models       = { path = "../models" }
    tower-http   = { version = "0.5", features = ["trace"] }

[[bin]]
    name = "surtr-ps"
    path = "src/main.rs"
